fix: Updating button layout on mobile
Buttons in sidebar on mobile now have appropriate spacing

--- a/modules/ept-frontend/client/scss/ept/global/_buttons.scss
+++ b/modules/ept-frontend/client/scss/ept/global/_buttons.scss
@@ -84,7 +84,7 @@
     padding: 0.5rem 1rem;
   }
 
-  @include media($mobile) {
+  @media screen and (max-width: 769px) {
     margin-bottom: 0.5rem;
   }
 }
